# pizza-sales-linear-regression

./: README.md  main.py  pyproject.toml
data/: sales_pizza_2023.csv  sales_pizza_2023_processed.pkl
notebooks/: pizza_sales_linear_regression.ipynb  pizza_sales_regression.ipynb
